# vid-conference-app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  start_dev.sh
.github/workflows/: rust.yml
actix-api/: Cargo.toml
actix-api/migrations/2024-04-21-210108_create_users/: up.sql
actix-api/migrations/2024-04-21-215735_create_users/: up.sql
actix-api/migrations/2024-04-23-120035_users/: up.sql
actix-api/migrations/2024-04-23-120834_users/: down.sql  up.sql
actix-api/src/: lib.rs  main.rs  schema.rs
actix-api/src/db/: auth.rs  mod.rs  models.rs
actix-api/src/db/users/: controller.rs  mod.rs  service.rs  util.rs
backend/: Cargo.toml
docs/: notes.txt  selected_packages.txt  todo.txt
protos/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
types/: Cargo.toml
types/src/: users.rs
yew-ui/: Cargo.toml  Trunk.toml  index.html
yew-ui/src/: lib.rs  main.rs  route.rs  router.rs
yew-ui/src/components/: button.rs  mod.rs  profile_text.rs  topbar.rs
yew-ui/src/helpers/: constants.rs  mod.rs  route.rs  states.rs  users.rs
yew-ui/src/pages/: home.rs  login.rs  mod.rs  profile.rs  signup.rs
yew-ui/static/: home.css  profile.css  static.module.css
