[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-diesel = "0.3.0"
actix-jwt-auth-middleware = "0.5.0"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-session = { version = "0.9.0", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.0"
log = "0.4.21"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
