[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-diesel = "0.3.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
