[package]
name = "yew-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
protos = { path = "../protos" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }