[package]
name = "yew-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
